# serializer version: 1
# name: test_water_heater_create_sensors
  dict({
    'current_temperature': None,
    'friendly_name': 'Water Heater',
    'max_temp': 31.0,
    'min_temp': 16.0,
    'operation_list': list([
      'auto',
      'heat',
      'off',
    ]),
    'operation_mode': 'auto',
    'supported_features': <WaterHeaterEntityFeature: 3>,
    'target_temp_high': None,
    'target_temp_low': None,
    'temperature': 65.0,
  })
# ---
# name: test_water_heater_create_sensors.1
  dict({
    'current_temperature': None,
    'friendly_name': 'Second Water Heater',
    'max_temp': 31.0,
    'min_temp': 16.0,
    'operation_list': list([
      'auto',
      'heat',
      'off',
    ]),
    'operation_mode': 'heat',
    'supported_features': <WaterHeaterEntityFeature: 3>,
    'target_temp_high': None,
    'target_temp_low': None,
    'temperature': 30.0,
  })
# ---
